k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elcorp
  labels:
    app.kubernetes.io/part-of: elcorp
