k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elcorp-ingress
  namespace: elcorp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.elcorp.na
      secretName: elcorp-tls
  rules:
    - host: api.elcorp.na
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elcorp-api
                port:
                  number: 80
